fix: layout breakage at small screen size

--- a/src/pages/episodes/components/refresh-podcast-button/RefreshPodcastButton.module.css
+++ b/src/pages/episodes/components/refresh-podcast-button/RefreshPodcastButton.module.css
@@ -1,3 +1,7 @@
+.button {
+  grid-row: 3;
+}
+
 @media (min-width: 35.875em) {
   .button {
     grid-row: revert;
